Check whether to launch a default action instead of action sheet https://bugs.webkit.org/show_bug.cgi?id=195225 <rdar://problem/47715544>

Patch by Jennifer Moore <jennifer.moore@apple.com> on 2019-03-12
Source/WebCore/PAL:

Reviewed by Daniel Bates.

Add new SPI declarations.

* pal/spi/ios/DataDetectorsUISPI.h:

Source/WebKit:

Reviewed by Daniel Bates and Tim Horton.

Notify DataDetectors at the start of a touch on a link, and check whether to immediately
launch the default action instead of an action sheet.

* UIProcess/ios/WKActionSheetAssistant.h:
* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant interactionDidStart]):
(-[WKActionSheetAssistant _createSheetWithElementActions:defaultTitle:showLinkTitle:]):
(-[WKActionSheetAssistant showImageSheet]):
(-[WKActionSheetAssistant showLinkSheet]):
(-[WKActionSheetAssistant showDataDetectorsSheet]):
(-[WKActionSheetAssistant _createSheetWithElementActions:showLinkTitle:]): Deleted.
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _webTouchEventsRecognized:]):

Canonical link: https://commits.webkit.org/209929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242801 268f45cc-cd09-0410-ab3c-d52691b4dbfc