Source/WebCore/PAL/pal/spi/ios/DataDetectorsUISPI.h
@@ -62,6 +62,13 @@
 
 #endif
 
+@interface DDDetectionController (Staging_48014858)
+- (NSString *)titleForURL:(NSURL *)url results:(NSArray *)results context:(NSDictionary *)context;
+- (DDAction *)defaultActionForURL:(NSURL *)url results:(NSArray *)results context:(NSDictionary *)context;
+- (void)interactionDidStartForURL:(NSURL *)url;
+- (BOOL)shouldImmediatelyLaunchDefaultActionForURL:(NSURL *)url;
+@end
+
 SOFT_LINK_PRIVATE_FRAMEWORK(DataDetectorsUI)
 SOFT_LINK_CLASS(DataDetectorsUI, DDDetectionController)
 SOFT_LINK_CONSTANT(DataDetectorsUI, kDataDetectorsLeadingText, const NSString *)
